# vesl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTENANCE_AUDIT_LOG.md  MAINTENANCE_AUDIT_LOG_2026-05-11.md  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  jam-determinism.yml  vesl-core-sync.yml
assets/: CHECKSUMS.sha256  guard.jam  mint.jam  settle.jam
crates/nock-noun-rs/: Cargo.toml  README.md
crates/nock-noun-rs/src/: lib.rs
crates/nockchain-client-rs/: Cargo.toml  README.md  rust-toolchain
crates/nockchain-client-rs/examples/: list_recent_txs.rs
crates/nockchain-client-rs/src/: chain.rs  lib.rs  note_data.rs  types.rs  wallet.rs
crates/nockchain-tip5-rs/: Cargo.toml  README.md
crates/nockchain-tip5-rs/src/: lib.rs
crates/vesl-checkpoint/: Cargo.toml
crates/vesl-checkpoint/src/: lib.rs
crates/vesl-checkpoint/tests/: end_to_end.rs
crates/vesl-core/: Cargo.toml
crates/vesl-core/src/: config.rs  forge.rs  guard.rs  lib.rs  mint.rs  noun_builder.rs  peek.rs  poke.rs  settle.rs  signing.rs  tx_builder.rs  types.rs  verify_tx.rs
crates/vesl-core/src/graft_pokes/: batch.rs  clock.rs  counter.rs  forge.rs  guard.rs  kv.rs  log.rs  mint.rs  mod.rs  queue.rs  rbac.rs  registry.rs  settle.rs  validate.rs
crates/vesl-core/tests/: signing_shim_compat.rs  wallet_toml_e2e.rs
docker/: NOCKCHAIN_COMMIT  README.md
docs/: AUDIT_C01_FOLLOWUP.md  AUDIT_C01_REAL_SETTLE.md  AUDIT_C01_ROTATE_ROOT.md  AUDIT_FOLLOWUP_INDEX.md  AUDIT_H01_TEST_MODE.md  AUDIT_H03_HASH_LEAF.md  AUDIT_H04_SIGNING_AUDIT.md  AUDIT_REPORT.md  AUDIT_REPORT_FINAL_BETA_2026-05-25.md  graft-manifest.md
docs/audit-logs/: MAINTENANCE_AUDIT_LOG_2026-04-24.md  MAINTENANCE_AUDIT_LOG_2026-05-13.md  MAINTENANCE_AUDIT_LOG_2026-05-14.md  MAINTENANCE_AUDIT_LOG_2026-05-15.md
hoon/lib/: batch-graft.hoon  clock-graft.hoon  counter-graft.hoon  domain-patterns.hoon  forge-graft.hoon  guard-graft.hoon  intent-graft.hoon  kernel-arms.hoon  kv-graft.hoon  log-graft.hoon  mint-graft.hoon  queue-graft.hoon  rbac-graft.hoon  registry-graft.hoon  settle-graft.hoon  validate-graft.hoon  vesl-gates.hoon  vesl-lower.hoon  vesl-stark.hoon
hull/: Cargo.toml
hull/src/: api.rs  config.rs  main.rs  verify.rs
hull/tests/: desync_regression.rs
kernels/forge/: Cargo.toml  build.rs
kernels/forge/src/: lib.rs
kernels/guard/: Cargo.toml  build.rs
kernels/guard/src/: lib.rs
kernels/mint/: Cargo.toml  build.rs
kernels/mint/src/: lib.rs
kernels/settle/: Cargo.toml  build.rs
kernels/settle/src/: lib.rs
protocol/lib/: README.md  batch-graft.hoon  batch-graft.toml  clock-graft.hoon  clock-graft.toml  counter-graft.hoon  counter-graft.toml  domain-patterns.hoon  forge-graft.hoon  forge-graft.toml  forge-kernel.hoon  guard-graft.hoon  guard-graft.toml  guard-kernel.hoon  intent-graft.hoon  intent-graft.toml  kernel-arms.hoon  kv-graft.hoon  kv-graft.toml  log-graft.hoon  log-graft.toml  mint-graft.hoon  mint-graft.toml  mint-kernel.hoon  queue-graft.hoon  queue-graft.toml  rag-logic.hoon  rbac-graft.hoon  rbac-graft.toml  registry-graft.hoon  registry-graft.toml  settle-graft.hoon  settle-graft.toml  settle-kernel.hoon  validate-graft.hoon  validate-graft.toml  vesl-entrypoint.hoon  vesl-gates.hoon  vesl-kernel.hoon  vesl-lower.hoon  (+6 more)
protocol/sur/: vesl.hoon
protocol/tests/: test-domain-patterns.hoon  test-graft-generic.hoon  test-graft-security.hoon  test-graft.hoon  test-intent-graft.hoon  test-replay-twice.hoon  test-vesl-gates.hoon
protocol/tests/fixtures/: domain_patterns_smoke.hoon
scripts/: .env.fakenet  bump-pin.sh  check-jam.sh  check-pins.sh  check-template-buildrs-drift.sh  check-templates.sh  fakenet-harness.sh  preflight.sh  release-notes.template.md  release.sh
scripts/hooks/: pre-push
templates/: GRAFTING.md  README.md
templates/counter/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
templates/counter/hoon/app/: app.hoon
templates/counter/src/: main.rs
templates/data-registry/: Cargo.toml  README.md  build.rs
templates/data-registry/hoon/app/: app.hoon
templates/data-registry/src/: main.rs
templates/graft-hash-gate/: Cargo.toml  README.md  build.rs
templates/graft-hash-gate/hoon/app/: app.hoon
templates/graft-hash-gate/hoon/common/: wrapper.hoon
templates/graft-hash-gate/hoon/lib/: settle-graft.hoon  vesl-merkle.hoon
templates/graft-hash-gate/src/: main.rs
templates/graft-intent/: Cargo.toml  MOVED.md  README.md  build.rs
templates/graft-intent/hoon/app/: app.hoon
templates/graft-intent/hoon/lib/: intent-graft.hoon
templates/graft-intent/src/: main.rs
templates/graft-mint/: Cargo.toml  README.md  build.rs
templates/graft-mint/hoon/app/: app.hoon
templates/graft-mint/src/: main.rs
templates/graft-scaffold/: Cargo.toml  README.md
templates/graft-scaffold/hoon/app/: app.hoon
templates/graft-scaffold/src/: main.rs
templates/graft-settle/: Cargo.toml  README.md  build.rs
templates/graft-settle/hoon/app/: app.hoon
templates/graft-settle/src/: main.rs
templates/settle-report/: Cargo.toml  README.md  build.rs
templates/settle-report/hoon/app/: app.hoon
templates/settle-report/src/: main.rs
templates/vesl/: Cargo.toml  README.md  build.rs
templates/vesl/hoon/lib/: lib.hoon
templates/vesl/src/: main.rs
templates/vesl/tests/: graft_lifecycle.rs
