[package]
name = "hull"
version = "0.1.0"
edition = "2024"

[lib]
name = "hull"
path = "src/lib.rs"

[[bin]]
name = "hull"
path = "src/main.rs"

# All nockchain crate paths resolve relative to $NOCK_HOME = ../../nockchain
# (sibling clone — see README §Setup).

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["limit"] }
tower = { version = "0.5", features = ["limit", "buffer"] }
toml = "0.8"
zeroize = "1"
bytes = "1"

# --- Vesl extracted crates ---
nock-noun-rs = { path = "../crates/nock-noun-rs" }
nockchain-tip5-rs = { path = "../crates/nockchain-tip5-rs", features = ["serde"] }
vesl-core = { path = "../crates/vesl-core", features = ["clap"] }

# --- Nockchain crates (pinned to monorepo at ../../nockchain) ---
nockvm = { path = "../../nockchain/crates/nockvm/rust/nockvm" }
nockapp = { path = "../../nockchain/crates/nockapp", default-features = false }
nockchain-types = { path = "../../nockchain/crates/nockchain-types" }
nockchain-math = { path = "../../nockchain/crates/nockchain-math" }
noun-serde = { path = "../../nockchain/crates/noun-serde" }

# --- Settle kernel (1.5MB, no STARK prover) ---
kernels-settle = { path = "../kernels/settle" }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"

