[package]
name = "nock-noun-rs"
version = "0.1.0"
edition = "2024"
description = "High-level Nock noun construction from Rust — NockStack helpers, cord/tag builders, jam/cue utilities"
license = "MIT OR Apache-2.0"

[dependencies]
# Nockchain monorepo crates — path-dep to sibling ../nockchain clone.
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockapp = { path = "../../../nockchain/crates/nockapp", default-features = false }
