[package]
name = "nockchain-client-rs"
version = "0.5.0-beta.1"
edition = "2024"
description = "Nockchain gRPC client — chain queries, wallet coordination, NoteData encoding for NockApp developers"
license = "MIT OR Apache-2.0"

[dependencies]
# Nockchain monorepo crates — path-dep to sibling ../nockchain clone.
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockapp = { path = "../../../nockchain/crates/nockapp", default-features = false }
nockapp-grpc = { path = "../../../nockchain/crates/nockapp-grpc" }
nockchain-types = { path = "../../../nockchain/crates/nockchain-types" }
nockchain-math = { path = "../../../nockchain/crates/nockchain-math" }
noun-serde = { path = "../../../nockchain/crates/noun-serde" }

# Vesl extracted crates
nockchain-tip5-rs = { path = "../nockchain-tip5-rs" }

# Standard deps
anyhow = "1.0"
tokio = { version = "1", features = ["time"] }
tonic = { version = "0.14.0", features = ["tls-webpki-roots"] }
tracing = "0.1"
