[package]
name = "nockchain-tip5-rs"
version = "0.1.0"
edition = "2024"
description = "Standalone tip5 Merkle tree — hash functions, tree construction, proof generation and verification with test vectors"
license = "MIT"

[dependencies]
# Nockchain monorepo crate — path-dep to sibling ../nockchain clone.
nockchain-math = { path = "../../../nockchain/crates/nockchain-math" }
subtle = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
