[package]
name = "vesl-checkpoint"
version = "0.5.0-beta.1"
edition = "2024"
description = "Snapshot/resume wrapper for live NockApps — bundle kernel state + metadata for graft lifecycle checkpoints"
license = "MIT OR Apache-2.0"

[dependencies]
# nockapp's NockApp::export_state (added in
# nockchain feature/nockapp-export-state) is the sole upstream surface
# this crate consumes for snapshotting; resume() rides the existing
# Cli::state_jam path inside boot::setup. Path-dep matches every other
# vesl-core member.
nockapp = { path = "../../../nockchain/crates/nockapp", default-features = false }

anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
