[package]
name = "graft-hash-gate"
version = "0.1.0"
edition = "2021"
authors = ["Vesl Examples <examples@vesl.local>"]
description = "NockApp with custom (non-RAG) verification gate — proves the Graft is domain-agnostic"

[[bin]]
name = "graft-hash-gate"
path = "src/main.rs"

[dependencies]
nockapp = { path = "../../../nockchain/crates/nockapp" }
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockvm_macros = { path = "../../../nockchain/crates/nockvm/rust/nockvm_macros" }

# Vesl — Mint for commitment, no RAG dependencies needed
vesl-core = { path = "../../crates/vesl-core" }
nock-noun-rs = { path = "../../crates/nock-noun-rs" }

tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

[patch.crates-io]
ibig = { path = "../../../nockchain/crates/nockvm/rust/ibig" }
