[package]
name = "graft-intent"
version = "0.0.0-placeholder"
edition = "2021"
authors = ["Vesl Examples <examples@vesl.local>"]
description = "Family-5 intent-graft placeholder template — crashes on any %intent-* poke, pending canonical upstream"

[[bin]]
name = "graft-intent"
path = "src/main.rs"

[dependencies]
nockapp = { path = "../../../nockchain/crates/nockapp" }
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockvm_macros = { path = "../../../nockchain/crates/nockvm/rust/nockvm_macros" }

nock-noun-rs = { path = "../../crates/nock-noun-rs" }

tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
