[package]
name = "graft-mint"
version = "0.1.0"
edition = "2021"
authors = ["Vesl Examples <examples@vesl.local>"]
description = "NockApp with Vesl Ink + Grip tentacles grafted in"

[[bin]]
name = "graft-mint"
path = "src/main.rs"

[dependencies]
nockapp = { path = "../../../nockchain/crates/nockapp" }
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockvm_macros = { path = "../../../nockchain/crates/nockvm/rust/nockvm_macros" }

# Vesl tentacles — Ink for commitment, Grip for verification
vesl-core = { path = "../../crates/vesl-core" }
nock-noun-rs = { path = "../../crates/nock-noun-rs" }

tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
sha2 = "0.10"

[patch.crates-io]
ibig = { path = "../../../nockchain/crates/nockvm/rust/ibig" }
