[package]
name = "settle-report"
version = "0.1.0"
edition = "2021"
authors = ["Vesl Examples <examples@vesl.local>"]
description = "Settlement NockApp — commit, verify, settle with replay protection"

[[bin]]
name = "settle-report"
path = "src/main.rs"

[dependencies]
nockapp = { path = "../../../nockchain/crates/nockapp" }
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockvm_macros = { path = "../../../nockchain/crates/nockvm/rust/nockvm_macros" }

tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

[patch.crates-io]
ibig = { path = "../../../nockchain/crates/nockvm/rust/ibig" }
